--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This app is used to fill the entries into mysql databases.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,12 @@
   "bugs": {
     "url": "https://github.com/GulfamAnsari/droidtechknow-dashboard/issues"
   },
-  "homepage": "https://github.com/GulfamAnsari/droidtechknow-dashboard#readme"
+  "homepage": "https://github.com/GulfamAnsari/droidtechknow-dashboard#readme",
+  "dependencies": {
+    "express": "^4.16.4",
+    "mysql": "^2.16.0"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.0"
+  }
 }
