--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "homepage": "https://github.com/GulfamAnsari/droidtechknow-dashboard#readme",
   "dependencies": {
     "express": "^4.16.4",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "nodemon": "^1.18.9"
   },
   "devDependencies": {
     "gulp": "^4.0.0"
