--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/GulfamAnsari/droidtechknow-dashboard#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "jade": "^1.11.0",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.9"
   },
