--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,9 @@
     "@angular/router": "~7.1.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ng2-smart-table": "^1.3.5",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
@@ -32,9 +34,9 @@
     "@angular/cli": "~7.1.4",
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -43,6 +45,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ng2-completer": "^2.0.8",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
