--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/GulfamAnsari/droidtechknow-dashboard#readme",
   "dependencies": {
+    "aws-sdk": "^2.387.0",
     "express": "^4.16.4",
     "jade": "^1.11.0",
     "mysql": "^2.16.0",
