--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/GulfamAnsari/droidtechknow-dashboard#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "@angular/cli": "~7.1.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "jade": "^1.11.0",
