--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
   },
   "homepage": "https://github.com/GulfamAnsari/droidtechknow-dashboard#readme",
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "@angular-devkit/build-angular": "~0.11.0",
     "@angular/cli": "~7.1.4",
+    "@angular/compiler-cli": "~7.1.0",
+    "@angular/language-service": "~7.1.0",
+    "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "jade": "^1.11.0",
