--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "build": "cd frontend && npm run build",
+    "git": "git add public/static && git commit -m 'update bundle file' && git push origin build",
+    "build": "git checkout build && cd frontend && npm run build && npm run git",
     "publish": "node index.js"
   },
   "repository": {
