--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "git": "git add public/static && git commit -m 'update bundle file' && git push origin build",
+    "git": "git rebase master && git push origin build -f && git add public/static && git commit -m 'update bundle file' && git push origin build",
     "publish": "git checkout build && npm run build --prefix frontend/ && npm run git"
   },
   "repository": {
