--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node index.js",
     "deleteBundle": "git checkout build && git rebase master && rm -rf public/static && git add public/static && git commit -m 'delete bundle file' && git push origin build -f",
     "git": "git add public/static && git commit -m 'update bundle file' && git push origin build && git checkout master",
-    "publish": "npm run deleteBundle && npm run build --prefix frontend/ && npm run git"
+    "publish": "npm run deleteBundle && npm run build --prefix frontend/ && npm run git && npm run logs",
+    "logs": "heroku logs --app droidtechknow-dashboard"
   },
   "repository": {
     "type": "git",
