--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-/node_modules
-/package-lock.json
 /frontend/dist
-/frontend/node_modules
-/frontend/package-lock.json
+*/node_modules
+*/package-lock.json
