--- a/frontend/react/package.json
+++ b/frontend/react/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && mv build/* ../../public/react",
+    "build": "react-scripts build && mv -T build/  ../../public/react",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
