--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "mongodb": "^3.3.1",
     "mysql": "^2.16.0",
     "nodemailer": "^5.1.1",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "notiflix-react": "^1.4.0"
   },
   "devDependencies": {}
 }
