--- a/frontend/react/package.json
+++ b/frontend/react/package.json
@@ -23,7 +23,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && mv -T build/  ../../public/react",
+    "build": "react-scripts build && mv -T build/*  ../../public/react",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
