--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "mysql": "^2.16.0",
     "nodemailer": "^5.1.1",
     "nodemon": "^1.18.9",
-    "notiflix-react": "^1.4.0"
+    "notiflix-react": "^1.4.0",
+    "oauth": "^0.9.15"
   },
   "devDependencies": {}
 }
